--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Maaz</div>
+      <div class="logo">Portfolio</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="Maaz profile picture" />
+        <img src="./assets/profile-pic.jpg" alt="Maaz profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
