updateding the index.html for maaz draft

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>MQ-Maaz</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -20,6 +20,7 @@
         </ul>
       </div>
     </nav>
+    
     <nav id="hamburger-nav">
       <div class="logo">Maaz Qureshi</div>
       <div class="hamburger-menu">
@@ -41,9 +42,24 @@
         <img src="./assets/profile-pic.jpg" alt="Maaz profile picture" />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">Maaz Qureshi</h1>
-        <p class="section__text__p2">Robotics & AI Research Engineer</p>
+    
+        <p class="section__text__p1">Hi, this is</p>
+<h1 class="title">Maaz Qureshi</h1>
+<p class="section__text__p2">Robotics & AI Research Engineer</p>
+
+<p class="hero-desc">
+  I am a robotics & AI research engineer with a passion for building intelligent systems
+  that help people work safer, faster, and better. My work spans multi-robot SLAM,
+  collaborative manipulation, mmWave radar automation, distributed 5G-connected robotics,
+  and high-fidelity computational physics of biological swimmers.
+</p>
+
+      <p class="hero-desc">
+  I have developed large-scale robotics systems integrating perception, communication,
+  motion planning, and simulation across academic and industry labs — including
+  emerging technologies in multi-agent autonomy and real-time robotic sensing.
+      </p>
+
         <div class="btn-container">
           <button
             class="btn btn-color-2"
