--- a/index.html
+++ b/index.html
@@ -48,16 +48,13 @@
 <p class="section__text__p2">Robotics & AI Research Engineer</p>
 
 <p class="hero-desc">
-  I am a robotics & AI research engineer with a passion for building intelligent systems
-  that help people work safer, faster, and better. My work spans multi-robot SLAM,
-  collaborative manipulation, mmWave radar automation, distributed 5G-connected robotics,
-  and high-fidelity computational physics of biological swimmers.
+  I am a robotics & AI research engineer with a passion for building intelligent robots that help people work, and better. My work spans multi-robot SLAM, collaborative manipulation, mmWave 4D radar & RGBD sensor fusion, distributed 5G-connected robotics, and computational intelligence.
 </p>
+During my M.A.Sc (applied researh) studies, I spent time at University of Waterloo (with Dr. William Melek and Dr. George Shaker) Apple Inc, UW Robohub, Keysight Technologies Inc, and Rogers Communication Canada Inc, where I worked on connected robotics technology.
 
+Earlier in my bachelors, I developed a passion for SWARM robotics which led to winning a 3rd price in best engineering science final year project. Later on, after B.Sc I got selected to su[ervise a NUST University team for Aerotech IMECH UK 2022 competition for development of hexacopter for locust swarm mission.
       <p class="hero-desc">
-  I have developed large-scale robotics systems integrating perception, communication,
-  motion planning, and simulation across academic and industry labs — including
-  emerging technologies in multi-agent autonomy and real-time robotic sensing.
+  
       </p>
 
         <div class="btn-container">
