--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 <p class="section__text__p2">Robotics & AI Research Engineer</p>
 
 <p class="hero-desc">
-  I am a robotics & AI research engineer with a passion for building intelligent robots that help people work, and better. My work spans multi-robot SLAM, collaborative manipulation, mmWave 4D radar & RGBD sensor fusion, distributed 5G-connected robotics, and computational intelligence.
+  I am a software engineer with a passion for building intelligent robots to work better. My research work spans multi-robot SLAM autonomy, manipulator motion planning, mmWave 4D radar & RGBD sensor fusion, distributed 5G-connected robotics, and computational intelligence.
 <p class="hero-desc">
 During my M.A.Sc (applied researh) studies, I spent time at University of Waterloo (with Dr. William Melek and Dr. George Shaker) Apple Inc, UW Robohub, Keysight Technologies Inc, and Rogers Communication Canada Inc, where I worked on connected robotics technology.
 <p class="hero-desc">
-Earlier in my bachelors, I developed a passion for SWARM robotics which led to winning a 3rd price in best engineering science final year project. Later on, after B.Sc I got selected to su[ervise a NUST University team for Aerotech IMECH UK 2022 competition for development of hexacopter for locust swarm mission.
+Earlier in my life, I developed a passion for SWARM robotics which led to winning a 3rd price in best engineering science final year project in B.Sc. Later, I got selected to supervise a NUST University Islamabad team for Aerotech IMECH United Kingdom 2022 competition for development of hexacopter for locust swarm autonomy mission.
       <p class="hero-desc">
   
       </p>
@@ -334,13 +334,13 @@ Earlier in my bachelors, I developed a passion for SWARM robotics which led to w
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Maaz-qureshi98'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Maaz-qureshi98'"
               >
                 Live Demo
               </button>
@@ -365,7 +365,7 @@ Earlier in my bachelors, I developed a passion for SWARM robotics which led to w
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:m23qures@uwaterloo.ca">m23qures@uwaterloo.ca</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -373,7 +373,7 @@ Earlier in my bachelors, I developed a passion for SWARM robotics which led to w
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/maaz-ahmad-046c/">LinkedIn</a></p>
         </div>
       </div>
     </section>
