updateding the index.html for maaz draft

--- a/index.html
+++ b/index.html
@@ -47,15 +47,27 @@
 <h1 class="title">Maaz Qureshi</h1>
 <p class="section__text__p2">Robotics & AI Research Engineer</p>
 
+
 <p class="hero-desc">
-  I am a software engineer with a passion for building intelligent robots to work better. My research work spans multi-robot SLAM autonomy, manipulator motion planning, mmWave 4D radar & RGBD sensor fusion, distributed 5G-connected robotics, and computational intelligence.
+  I am a software engineer with a passion for building intelligent robots to work better. 
+  My research work spans multi-robot SLAM autonomy, manipulator motion planning, mmWave 4D radar & RGB-D sensor fusion, 
+  distributed 5G-connected robotics, and computational intelligence.
+</p>
+
 <p class="hero-desc">
-During my M.A.Sc (applied researh) studies, I spent time at University of Waterloo (with Dr. William Melek and Dr. George Shaker) Apple Inc, UW Robohub, Keysight Technologies Inc, and Rogers Communication Canada Inc, where I worked on connected robotics technology.
+  During my M.A.Sc (applied research) studies, I spent time at the University of Waterloo 
+  (with <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/profile/wmelek" target="_blank">Dr. William Melek</a> 
+  and <a href="https://uwaterloo.ca/electrical-computer-engineering/profile/gshaker" target="_blank">Dr. George Shaker</a>),  
+  Apple Inc., UW Robohub, Keysight Technologies Inc., and Rogers Communications Canada Inc., 
+  where I worked on connected robotics technology.
+</p>
+
 <p class="hero-desc">
-Earlier in my life, I developed a passion for SWARM robotics which led to winning a 3rd price in best engineering science final year project in B.Sc. Later, I got selected to supervise a NUST University Islamabad team for Aerotech IMECH United Kingdom 2022 competition for development of hexacopter for locust swarm autonomy mission.
-      <p class="hero-desc">
-  
-      </p>
+  Earlier in my life, I developed a passion for swarm robotics, which led to winning 3rd place  
+  in Best Engineering Science Final Year Project during my B.Sc. Later, I was selected to supervise  
+  a NUST University Islamabad team for the Aerotech IMECHE United Kingdom 2022 competition,  
+  developing a hexacopter for a locust-swarm autonomy mission.
+</p>
 
         <div class="btn-container">
           <button
