updateding the index.html for maaz draft

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     
         <p class="section__text__p1">Hi, this is</p>
 <h1 class="title">Maaz Qureshi</h1>
-<p class="section__text__p2">Robotics & AI Research Engineer</p>
+<p class="section__text__p2">Robotics & AI Research Software Engineer</p>
 
 
 <p class="hero-desc">
-  I am a software engineer with a passion for building intelligent robots to work better. 
+  I am a mechatronics engineer with a passion for building intelligent robots to work better. 
   My research work spans multi-robot SLAM autonomy, manipulator motion planning, mmWave 4D radar & RGB-D sensor fusion, 
   distributed 5G-connected robotics, and computational intelligence.
 </p>
