--- a/index.html
+++ b/index.html
@@ -146,134 +146,130 @@
         class="icon arrow"
         onclick="location.href='./#experience'"
       />
-    </section>
-    <section id="experience">
-      <p class="section__text__p1">Explore My</p>
-      <h1 class="title">Experience</h1>
-      <div class="experience-details-container">
-        <div class="about-containers">
-          <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
-            <div class="article-container">
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>CSS</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>SASS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>JavaScript</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>TypeScript</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Material UI</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
+      <section id="experience">
+  <p class="section__text__p1">Explore My</p>
+  <h1 class="title">Experience</h1>
+
+  <div class="experience-details-container">
+    <div class="about-containers">
+
+      <!-- LEFT COLUMN: INDUSTRY -->
+      <div class="details-container">
+        <h2 class="experience-sub-title">Industry Experience</h2>
+        <div class="article-container">
+
+          <!-- Cobionix -->
+          <article>
+            <img src="./assets/checkmark.png" class="icon" />
+            <div>
+              <h3>AI & Robotics Software Engineer</h3>
+              <p><b>Cobionix Corporation • Kitchener, Canada</b><br>Sep 2025 – Present</p>
+              <ul class="exp-ul">
+                <li>AI development for computer vision on Jetson Orin (ONNX/TensorRT).</li>
+                <li>GPU quantization + profiling for low-latency edge compute.</li>
+                <li>Developed adaptive inference loops based on GPU/CPU load.</li>
+              </ul>
             </div>
-          </div>
-          <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
-            <div class="article-container">
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>PostgreSQL</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Node JS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Express JS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Git</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
+          </article>
+
+          <!-- Apple -->
+          <article>
+            <img src="./assets/checkmark.png" class="icon" />
+            <div>
+              <h3>Research Assistant: Software Engineering</h3>
+              <p><b>Apple Inc. • Waterloo, Canada</b><br>Jan 2024 – July 2025</p>
+              <ul class="exp-ul">
+                <li>Optimized SDR WiFi/OTA data paths in C++/Python on embedded Linux.</li>
+                <li>Profiling CPU, memory & I/O paths to improve throughput.</li>
+                <li>ML tuning of wireless parameters using RF/telemetry logs.</li>
+                <li>Collaborated with embedded, RF, and firmware teams for OTA validation.</li>
+              </ul>
             </div>
-          </div>
+          </article>
+
+          <!-- Abyss -->
+          <article>
+            <img src="./assets/checkmark.png" class="icon" />
+            <div>
+              <h3>Asset Integrity Engineer II — Software</h3>
+              <p><b>Abyss Solutions • Islamabad & Australia</b><br>May 2022 – Dec 2023</p>
+              <ul class="exp-ul">
+                <li>Developed C++/TensorFlow CV pipelines for underwater inspection.</li>
+                <li>Optimized batch inference under memory & latency constraints.</li>
+                <li>Fused sonar + camera data for robust anomaly detection.</li>
+                <li>Led a 10-engineer team for BP Clair Ridge (18,000+ assets).</li>
+              </ul>
+            </div>
+          </article>
+
         </div>
       </div>
+
+      <!-- RIGHT COLUMN: RESEARCH -->
+      <div class="details-container">
+        <h2 class="experience-sub-title">Research Experience</h2>
+        <div class="article-container">
+
+          <!-- RoboHub -->
+          <article>
+            <img src="./assets/checkmark.png" class="icon" />
+            <div>
+              <h3>Autonomy Software Graduate Researcher</h3>
+              <p><b>UW RoboHub • Waterloo, Canada</b><br>Jan 2024 – Sep 2025</p>
+              <ul class="exp-ul">
+                <li>Developed multi-robot SLAM with 85% improvement vs SOTA.</li>
+                <li>Fusion of mmWave 4D radar + RGB-D for robust real-time perception.</li>
+                <li>Implemented TSDF-octree mapping on edge GPUs (Docker).</li>
+                <li>Deployed YOLO + NeRF under GPU constraints.</li>
+                <li>Created ML pipelines for SLAM accuracy & latency optimization.</li>
+              </ul>
+            </div>
+          </article>
+
+          <!-- Keysight -->
+          <article>
+            <img src="./assets/checkmark.png" class="icon" />
+            <div>
+              <h3>Research Assistant: ML Software Engineering</h3>
+              <p><b>Keysight Technologies • Waterloo, Canada</b><br>Sep 2024 – Dec 2024</p>
+              <ul class="exp-ul">
+                <li>Developed OMPL-based motion planning for 7-DoF cobot.</li>
+                <li>Integrated ML-augmented RRT planners with benchmarking tools.</li>
+                <li>Achieved 100% collision-free constraints with auto-generated configs.</li>
+                <li>Validated motion plans through hardware-in-loop deployment.</li>
+              </ul>
+            </div>
+          </article>
+
+          <!-- Rogers -->
+          <article>
+            <img src="./assets/checkmark.png" class="icon" />
+            <div>
+              <h3>Software Engineer • MITACS Research Internship</h3>
+              <p><b>Rogers Communications • Waterloo, Canada</b><br>Jan 2024 – Aug 2025</p>
+              <ul class="exp-ul">
+                <li>Integrated 5G URLLC with AI-SLAM (C++/Jetson).</li>
+                <li>37% latency reduction via ML congestion prediction models.</li>
+                <li>Optimized 28 GHz 5G edge compute using TensorRT.</li>
+                <li>Dockerized ROS2 services with performance telemetry.</li>
+              </ul>
+            </div>
+          </article>
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  
+
+
+
+      
+
+
+
       <img
         src="./assets/arrow.png"
         alt="Arrow icon"
