updateding the index.html for maaz draft

--- a/index.html
+++ b/index.html
@@ -146,123 +146,297 @@
         class="icon arrow"
         onclick="location.href='./#experience'"
       />
+
+
+
+
+    </section>
+    <section id="experience">
+
+      <p class="section__text__p1">Explore My</p>
+      <h1 class="title">Experience</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-container">
+            <h2 class="experience-sub-title">Frontend Development</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>HTML</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>CSS</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>SASS</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>JavaScript</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>TypeScript</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Material UI</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="details-container">
+            <h2 class="experience-sub-title">Frontend Development</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>PostgreSQL</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Node JS</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Express JS</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Git</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
       <section id="experience">
-  <p class="section__text__p1">Explore My</p>
+  <p class="section__text__p1">My Work & Professional Experience</p>
   <h1 class="title">Experience</h1>
 
-  <div class="experience-details-container">
-    <div class="about-containers">
+  <div class="experience-wrapper">
 
-      <!-- LEFT COLUMN: INDUSTRY -->
-      <div class="details-container">
-        <h2 class="experience-sub-title">Industry Experience</h2>
-        <div class="article-container">
-
-          <!-- Cobionix -->
-          <article>
-            <img src="./assets/checkmark.png" class="icon" />
-            <div>
-              <h3>AI & Robotics Software Engineer</h3>
-              <p><b>Cobionix Corporation • Kitchener, Canada</b><br>Sep 2025 – Present</p>
-              <ul class="exp-ul">
-                <li>AI development for computer vision on Jetson Orin (ONNX/TensorRT).</li>
-                <li>GPU quantization + profiling for low-latency edge compute.</li>
-                <li>Developed adaptive inference loops based on GPU/CPU load.</li>
-              </ul>
-            </div>
-          </article>
-
-          <!-- Apple -->
-          <article>
-            <img src="./assets/checkmark.png" class="icon" />
-            <div>
-              <h3>Research Assistant: Software Engineering</h3>
-              <p><b>Apple Inc. • Waterloo, Canada</b><br>Jan 2024 – July 2025</p>
-              <ul class="exp-ul">
-                <li>Optimized SDR WiFi/OTA data paths in C++/Python on embedded Linux.</li>
-                <li>Profiling CPU, memory & I/O paths to improve throughput.</li>
-                <li>ML tuning of wireless parameters using RF/telemetry logs.</li>
-                <li>Collaborated with embedded, RF, and firmware teams for OTA validation.</li>
-              </ul>
-            </div>
-          </article>
-
-          <!-- Abyss -->
-          <article>
-            <img src="./assets/checkmark.png" class="icon" />
-            <div>
-              <h3>Asset Integrity Engineer II — Software</h3>
-              <p><b>Abyss Solutions • Islamabad & Australia</b><br>May 2022 – Dec 2023</p>
-              <ul class="exp-ul">
-                <li>Developed C++/TensorFlow CV pipelines for underwater inspection.</li>
-                <li>Optimized batch inference under memory & latency constraints.</li>
-                <li>Fused sonar + camera data for robust anomaly detection.</li>
-                <li>Led a 10-engineer team for BP Clair Ridge (18,000+ assets).</li>
-              </ul>
-            </div>
-          </article>
-
-        </div>
+    <!-- Cobionix -->
+    <div class="exp-row">
+      <div class="exp-left">
+        <p class="exp-date">Sept 2025 — Present</p>
+        <p class="exp-location">Kitchener, Canada</p>
+        <img src="./assets/cobionix-logo.png" class="exp-logo" />
       </div>
 
-      <!-- RIGHT COLUMN: RESEARCH -->
-      <div class="details-container">
-        <h2 class="experience-sub-title">Research Experience</h2>
-        <div class="article-container">
-
-          <!-- RoboHub -->
-          <article>
-            <img src="./assets/checkmark.png" class="icon" />
-            <div>
-              <h3>Autonomy Software Graduate Researcher</h3>
-              <p><b>UW RoboHub • Waterloo, Canada</b><br>Jan 2024 – Sep 2025</p>
-              <ul class="exp-ul">
-                <li>Developed multi-robot SLAM with 85% improvement vs SOTA.</li>
-                <li>Fusion of mmWave 4D radar + RGB-D for robust real-time perception.</li>
-                <li>Implemented TSDF-octree mapping on edge GPUs (Docker).</li>
-                <li>Deployed YOLO + NeRF under GPU constraints.</li>
-                <li>Created ML pipelines for SLAM accuracy & latency optimization.</li>
-              </ul>
-            </div>
-          </article>
-
-          <!-- Keysight -->
-          <article>
-            <img src="./assets/checkmark.png" class="icon" />
-            <div>
-              <h3>Research Assistant: ML Software Engineering</h3>
-              <p><b>Keysight Technologies • Waterloo, Canada</b><br>Sep 2024 – Dec 2024</p>
-              <ul class="exp-ul">
-                <li>Developed OMPL-based motion planning for 7-DoF cobot.</li>
-                <li>Integrated ML-augmented RRT planners with benchmarking tools.</li>
-                <li>Achieved 100% collision-free constraints with auto-generated configs.</li>
-                <li>Validated motion plans through hardware-in-loop deployment.</li>
-              </ul>
-            </div>
-          </article>
-
-          <!-- Rogers -->
-          <article>
-            <img src="./assets/checkmark.png" class="icon" />
-            <div>
-              <h3>Software Engineer • MITACS Research Internship</h3>
-              <p><b>Rogers Communications • Waterloo, Canada</b><br>Jan 2024 – Aug 2025</p>
-              <ul class="exp-ul">
-                <li>Integrated 5G URLLC with AI-SLAM (C++/Jetson).</li>
-                <li>37% latency reduction via ML congestion prediction models.</li>
-                <li>Optimized 28 GHz 5G edge compute using TensorRT.</li>
-                <li>Dockerized ROS2 services with performance telemetry.</li>
-              </ul>
-            </div>
-          </article>
-
-        </div>
+      <div class="exp-right">
+        <h2 class="exp-company">Cobionix Corporation</h2>
+        <h3 class="exp-title">AI & Robotics Software Engineer</h3>
+        <p class="exp-description">
+          AI model development and optimization on NVIDIA Jetson Orin (TensorRT/ONNX) for real-time robotics systems.
+          Built adaptive inference pipelines and low-latency perception modules for autonomous platforms.
+        </p>
+        <ul>
+          <li>AI computer vision pipeline on Jetson Orin</li>
+          <li>GPU quantization and profiling</li>
+          <li>Adaptive firmware-style inference loops</li>
+        </ul>
       </div>
-
     </div>
-  </div>
 
-  
+    <hr />
+
+    <!-- Apple -->
+    <div class="exp-row">
+      <div class="exp-left">
+        <p class="exp-date">Jan 2024 — July 2025</p>
+        <p class="exp-location">Waterloo, Canada</p>
+        <img src="./assets/apple-logo.png" class="exp-logo" />
+      </div>
+
+      <div class="exp-right">
+        <h2 class="exp-company">Apple Inc.</h2>
+        <h3 class="exp-title">Research Assistant — Software Engineering</h3>
+        <p class="exp-description">
+          Worked on a confidential R&D project (NDA) optimizing wireless data paths and embedded Linux performance
+          using C++, Python, and ML-based telemetry analysis.
+        </p>
+        <ul>
+          <li>Optimized WiFi/OTA SDR data paths on embedded Linux</li>
+          <li>CPU/memory profiling for wireless pipeline optimization</li>
+          <li>ML-based RF tuning through telemetry analysis</li>
+        </ul>
+      </div>
+    </div>
+
+    <hr />
+
+    <!-- RoboHub -->
+    <div class="exp-row">
+      <div class="exp-left">
+        <p class="exp-date">Jan 2024 — Sept 2025</p>
+        <p class="exp-location">Waterloo, Canada</p>
+        <img src="./assets/uw-logo.png" class="exp-logo" />
+      </div>
+
+      <div class="exp-right">
+        <h2 class="exp-company">UW RoboHub</h2>
+        <h3 class="exp-title">Autonomy Software Researcher</h3>
+        <p class="exp-description">
+          Developed multi-robot SLAM, mmWave radar fusion, and GPU-accelerated mapping systems with significant
+          performance improvements over SOTA baselines.
+        </p>
+        <ul>
+          <li>85% improved multi-robot SLAM (C++/ROS2)</li>
+          <li>4D radar + RGB-D fusion (92% accuracy)</li>
+          <li>TSDF-octree mapping on edge GPUs</li>
+          <li>ML-NeRF + YOLO deployment under GPU constraints</li>
+        </ul>
+      </div>
+    </div>
+
+    <hr />
+
+    <!-- Keysight -->
+    <div class="exp-row">
+      <div class="exp-left">
+        <p class="exp-date">Sept 2024 — Dec 2024</p>
+        <p class="exp-location">Waterloo, Canada</p>
+        <img src="./assets/keysight-logo.png" class="exp-logo" />
+      </div>
+
+      <div class="exp-right">
+        <h2 class="exp-company">Keysight Technologies</h2>
+        <h3 class="exp-title">Research Assistant — ML Software Engineering</h3>
+        <p class="exp-description">
+          Developed motion-planning software for a 7-DoF cobot using OMPL and ML-augmented planners.
+        </p>
+        <ul>
+          <li>ML-augmented RRT motion planners</li>
+          <li>Sim-to-real validation with hardware-in-loop</li>
+          <li>Auto-generated planning tree configs (100% collision-free)</li>
+        </ul>
+      </div>
+    </div>
+
+    <hr />
+
+    <!-- Rogers -->
+    <div class="exp-row">
+      <div class="exp-left">
+        <p class="exp-date">Jan 2024 — Aug 2025</p>
+        <p class="exp-location">Waterloo, Canada</p>
+        <img src="./assets/rogers-logo.png" class="exp-logo" />
+      </div>
+
+      <div class="exp-right">
+        <h2 class="exp-company">Rogers Communications</h2>
+        <h3 class="exp-title">Software Engineer — MITACS Research</h3>
+        <p class="exp-description">
+          Integrated AI-SLAM with 5G URLLC using embedded C++ pipelines and TensorRT models on Jetson.
+        </p>
+        <ul>
+          <li>37% latency improvement using ML congestion prediction</li>
+          <li>TensorRT optimization for 28GHz low-latency links</li>
+          <li>Containerized ROS2 services with real-time monitoring</li>
+        </ul>
+      </div>
+    </div>
+
+    <hr />
+
+    <!-- Abyss -->
+    <div class="exp-row">
+      <div class="exp-left">
+        <p class="exp-date">May 2022 — Dec 2023</p>
+        <p class="exp-location">Islamabad & Australia</p>
+        <img src="./assets/abyss-logo.png" class="exp-logo" />
+      </div>
+
+      <div class="exp-right">
+        <h2 class="exp-company">Abyss Solutions</h2>
+        <h3 class="exp-title">Asset Integrity Engineer II — Software</h3>
+        <p class="exp-description">
+          Built underwater CV systems for ROV/AUV inspection using C++ and TensorFlow, processing 18,000+ offshore assets.
+        </p>
+        <ul>
+          <li>Sonar + camera fusion pipeline</li>
+          <li>Large-scale batch inference optimization</li>
+          <li>Team lead for BP Clair Ridge inspection (91% high-quality output)</li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+      
 
 
 
