--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     <!-- EXPERIENCE 3 - UW ROBOHUB -->
     <div class="exp-box">
       <div class="exp-left">
-        <img src="./assets/uwaterloo.png" class="exp-logo" alt="UW Logo">
+        <img src="./assets/robohub.png" class="exp-logo" alt="UW Logo">
         <p class="exp-date">Jan 2024 – Sept 2025</p>
         <p class="exp-location">Waterloo, Canada</p>
       </div>
@@ -446,7 +446,7 @@
 
 
     <section id="projects">
-  <p class="section__text__p1">Browse My Recent</p>
+  <p class="section__text__p1">Selected Research</p>
   <h1 class="title">Projects</h1>
 
   <div class="projects-wrapper">
@@ -454,14 +454,14 @@
     <!-- CRADMap -->
     <div class="proj-row">
       <div class="proj-left">
-        <img src="./assets/cradmap.png" class="proj-img" />
+        <img src="./assets/project-1.png" class="proj-img" />
       </div>
 
       <div class="proj-right">
-        <h2 class="proj-title">Advanced Volumetric Mapping (SLAM) with 5G-Connected Multi-Robots & 4D Radar</h2>
+        <h2 class="proj-title">CRADMap: Applied Distributed Volumetric Mapping with 5G-Connected Multi-Robots and 4D Radar Perception</h2>
         <h3 class="proj-sub">MASc Research — UW RoboHub & WSDL Labs<br/>
             Supervisor: Dr. William Melek & Dr. George Shaker<br/>
-            Industry Partner: Rogers Communications
+            Industry Partner: Rogers Communications Canada Inc
         </h3>
         <p class="proj-desc">
           Developed a distributed SLAM system combining RGB-D sensing, 4D mmWave radar,
@@ -471,8 +471,8 @@
         </p>
 
         <div class="proj-links">
-          <a href="http://surl.li/xgfpxd" target="_blank" class="proj-link">GitHub Repository</a>
-          <a href="#" target="_blank" class="proj-link">View Project Video</a>
+          <a href="https://github.com/Maaz-qureshi98/CRADMap-Beyond-the-Visible" target="_blank" class="proj-link">GitHub Repository</a>
+          <a href="https://www.youtube.com/watch?v=eTLxCY2rRMA" target="_blank" class="proj-link">View Project Video</a>
         </div>
       </div>
     </div>
@@ -482,7 +482,7 @@
     <!-- RAPTAR / Cobots -->
     <div class="proj-row">
       <div class="proj-left">
-        <img src="./assets/cobot.png" class="proj-img" />
+        <img src="./assets/project-2.png" class="proj-img" />
       </div>
 
       <div class="proj-right">
@@ -495,7 +495,9 @@
         </p>
 
         <div class="proj-links">
-          <a href="#" target="_blank" class="proj-link">View Project Video</a>
+          <a href="#" target="_blank" class="https://github.com/Maaz-qureshi98/RAPTAR-Motion-Planning?tab=readme-ov-file">View Project Video</a>
+           <a href="https://github.com/Maaz-qureshi98/RAPTAR-Motion-Planning?tab=readme-ov-file" target="_blank" class="proj-link">GitHub Repository</a>
+         
         </div>
       </div>
     </div>
@@ -505,7 +507,7 @@
     <!-- Humanoid Robots -->
     <div class="proj-row">
       <div class="proj-left">
-        <img src="./assets/nao.png" class="proj-img" />
+        <img src="./assets/project-3.png" class="proj-img" />
       </div>
 
       <div class="proj-right">
@@ -518,7 +520,7 @@
         </p>
 
         <div class="proj-links">
-          <a href="#" target="_blank" class="proj-link">View Research Document</a>
+          <a href="https://drive.google.com/file/d/1IvIz7Xvnk-jjGcVKldO5CLgQ5YhUBckr/view" target="_blank" class="proj-link">View Research Document</a>
         </div>
       </div>
     </div>
@@ -528,7 +530,7 @@
     <!-- Swarm Robotics -->
     <div class="proj-row">
       <div class="proj-left">
-        <img src="./assets/swarm.png" class="proj-img" />
+        <img src="./assets/project4.png" class="proj-img" />
       </div>
 
       <div class="proj-right">
@@ -541,7 +543,7 @@
         </p>
 
         <div class="proj-links">
-          <a href="#" target="_blank" class="proj-link">View Project Video</a>
+          <a href="https://www.youtube.com/watch?v=2UYPGOTPboM" target="_blank" class="proj-link">View Project Video</a>
         </div>
       </div>
     </div>
