updateding the index.html for maaz draft

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/Resume_Maaz.pdf')"
           >
             Download CV
           </button>
@@ -454,7 +454,7 @@
     <!-- CRADMap -->
     <div class="proj-row">
       <div class="proj-left">
-        <img src="./assets/project-1.png" class="proj-img" />
+        <img src="./assets/project1.jpg" class="proj-img" />
       </div>
 
       <div class="proj-right">
@@ -482,7 +482,7 @@
     <!-- RAPTAR / Cobots -->
     <div class="proj-row">
       <div class="proj-left">
-        <img src="./assets/project-2.png" class="proj-img" />
+        <img src="./assets/project2.jpg" class="proj-img" />
       </div>
 
       <div class="proj-right">
@@ -507,7 +507,7 @@
     <!-- Humanoid Robots -->
     <div class="proj-row">
       <div class="proj-left">
-        <img src="./assets/project-3.png" class="proj-img" />
+        <img src="./assets/project3.png" class="proj-img" />
       </div>
 
       <div class="proj-right">
@@ -553,7 +553,7 @@
     <!-- Underwater DAM Inspection -->
     <div class="proj-row">
       <div class="proj-left">
-        <img src="./assets/dam1.png" class="proj-img" />
+        <img src="./assets/project5.jpg" class="proj-img" />
       </div>
 
       <div class="proj-right">
@@ -576,7 +576,7 @@
     <!-- Canal Inspection -->
     <div class="proj-row">
       <div class="proj-left">
-        <img src="./assets/dam2.png" class="proj-img" />
+        <img src="./assets/project6.jpg" class="proj-img" />
       </div>
 
       <div class="proj-right">
@@ -598,7 +598,7 @@
     <!-- Healthcare Robot -->
     <div class="proj-row">
       <div class="proj-left">
-        <img src="./assets/healthbot.png" class="proj-img" />
+        <img src="./assets/project7.jpg" class="proj-img" />
       </div>
 
       <div class="proj-right">
